fix: ik position, green ids from double to int, others